// ============================================================================
// /asset/ehs-incident-service (版本 2.0)
// 描述: 管理环境、健康与安全 (EHS) 事件的报告和跟踪。
//       字段设计参考核心ERP的EHS模块事件管理表结构。
// ============================================================================

syntax = "proto3";

package am.eh.v1;

option go_package = "github.com/enterprise/erp/protos/am/eh;eh";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: EHSIncidentService
// ============================================================================

service EHSIncidentService {
  // 报告一个EHS事件
  rpc ReportIncident(ReportIncidentRequest) returns (ReportIncidentResponse) {

    option (google.api.http) = {

      post: "/api/v1/asset/report-incident"

      body: "*"

    };

  }

  // 获取EHS事件详情
  rpc GetIncident(GetIncidentRequest) returns (IncidentDetail) {


    option (google.api.http) = {


      get: "/api/v1/asset/incident"


    };


  }

  // 更新EHS事件状态或添加调查结果
  rpc UpdateIncident(UpdateIncidentRequest) returns (UpdateIncidentResponse) {


    option (google.api.http) = {


      put: "/api/v1/asset/incident"


      body: "*"


    };


  }

  // 关闭EHS事件 (New)
  rpc CloseIncident(CloseIncidentRequest) returns (UpdateIncidentResponse) {


    option (google.api.http) = {


      post: "/api/v1/asset/close-incident"


      body: "*"


    };


  }

  // 查询事件列表 (New)
  rpc ListIncidents(ListIncidentsRequest) returns (ListIncidentsResponse) {


    option (google.api.http) = {


      get: "/api/v1/asset/incidents"


    };


  }
}

// ============================================================================
// 数据结构: Incident (事件)
// ============================================================================

// EHS事件详情
message IncidentDetail {
  string incident_id = 1;
  common.v1.IncidentCategory category = 2;
  string title = 3;
  string description = 4;
  string location = 5;
  google.protobuf.Timestamp incident_datetime = 6;
  string reported_by = 7;
  common.v1.IncidentStatus status = 8;
  repeated InvestigationFinding findings = 9;
}

// 调查结果
message InvestigationFinding {
  string finding_id = 1;
  string investigator = 2;
  string description = 3;
  string root_cause_analysis = 4;
  string corrective_and_preventive_actions = 5;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 报告事件请求
message ReportIncidentRequest {
  IncidentDetail incident = 1;
  common.v1.RequestContext context = 99;
}

// 报告事件响应
message ReportIncidentResponse {
  bool success = 1;
  string incident_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 获取事件请求
message GetIncidentRequest {
  string incident_id = 1;
  common.v1.RequestContext context = 99;
}

// 更新事件请求
message UpdateIncidentRequest {
  string incident_id = 1;
  common.v1.IncidentStatus new_status = 2;
  InvestigationFinding new_finding = 3;
  common.v1.RequestContext context = 99;
}

message CloseIncidentRequest {
  string incident_id = 1;
  string closure_comment = 2;
  common.v1.RequestContext context = 99;
}

// 更新事件响应
message UpdateIncidentResponse {
  bool success = 1;
  repeated common.v1.ApiMessage messages = 2;
}

message ListIncidentsRequest {
  common.v1.DateRange date_range = 1;
  common.v1.IncidentCategory category = 2;
  common.v1.IncidentStatus status = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListIncidentsResponse {
  repeated IncidentDetail incidents = 1;
  common.v1.PaginationResponse pagination = 2;
}
